Added mail option

--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,13 @@
         <h4>Pantelis Giazitsis</h4>
         <a href="https://www.linkedin.com/in/pantelis-giazitsis-a0a30357/" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/pantelisss" target="_blank" rel="noopener noreferrer" title="GitHub"><i class="fab fa-github"></i></a>
+        <a href="mailto:giazitsispantelis@gmail.com" target="_blank" rel="noopener noreferrer" title="Email"><i class="fas fa-envelope"></i></a>
       </div>
       <div class="founder">
         <h4>Manolis Zervos</h4>
         <a href="https://www.linkedin.com/in/manolis-zervos-5a2146108/" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/manoszer" target="_blank" rel="noopener noreferrer" title="GitHub"><i class="fab fa-github"></i></a>
+        <a href="mailto:manoliszervos86@gmail.com" target="_blank" rel="noopener noreferrer" title="Email"><i class="fas fa-envelope"></i></a>
       </div>
     </div>
     <div class="copyright">
