--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
   <header>
     <img src="inf_white.svg" alt="Infinite Loop Logo" class="logo">
@@ -21,28 +23,86 @@
       <p>We are a software company dedicated to building modern, efficient, and scalable mobile applications.</p>
     </section>
     <section>
-      <h2>Contact</h2>
-      <p>Reach us at <a href="mailto:infinite.loop.mob.dev@gmail.com">infinite.loop.mob.dev@gmail.com</a></p>
+      <h2>Contact Us</h2>
+      <form id="contact-form" class="contact-form">
+        <div class="form-row">
+          <div class="form-group">
+            <label for="first-name">First Name</label><br>
+            <input type="text" id="first-name" name="first-name">
+          </div>
+          <div class="form-group">
+            <label for="last-name">Last Name</label><br>
+            <input type="text" id="last-name" name="last-name">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email"><span style='color: #d32f2f;'>*</span> Email Address</label><br>
+          <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+          <label for="question"><span style='color: #d32f2f;'>*</span> Leave your message</label><br>
+          <textarea id="question" name="question" rows="4" required></textarea>
+        </div>
+        <input type="hidden" name="name" id="full-name">
+        <input type="hidden" name="message" id="full-message">
+        <button type="submit" class="submit-btn">SUBMIT</button>
+      </form>
+      <script>
+        document.getElementById('contact-form').addEventListener('submit', function(event) {
+          event.preventDefault();
+          // Set hidden fields for EmailJS template
+          var firstName = document.getElementById('first-name').value.trim();
+          var lastName = document.getElementById('last-name').value.trim();
+          document.getElementById('full-name').value = (firstName + ' ' + lastName).trim();
+          document.getElementById('full-message').value = document.getElementById('question').value;
+          emailjs.sendForm('service_g38infl', 'template_jwvn8pb', this)
+            .then(function() {
+              alert('Many thanks for contacting us! We will get back to you as soon as possible.');
+              // Clear form fields
+              document.getElementById('first-name').value = '';
+              document.getElementById('last-name').value = '';
+              document.getElementById('email').value = '';
+              document.getElementById('question').value = '';
+              document.getElementById('full-name').value = '';
+              document.getElementById('full-message').value = '';
+            }, function(error) {
+              alert('Failed to send message. Please try again.');
+            });
+        });
+        </script>
     </section>
   </main>
   <footer>
     <div class="founders">
       <div class="founder">
         <h4>Pantelis Giazitsis</h4>
-        <a href="https://www.linkedin.com/in/pantelis-giazitsis-a0a30357/" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/pantelisss" target="_blank" rel="noopener noreferrer" title="GitHub"><i class="fab fa-github"></i></a>
-        <a href="mailto:giazitsispantelis@gmail.com" target="_blank" rel="noopener noreferrer" title="Email"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/pantelis-giazitsis-a0a30357/" target="_blank" rel="noopener noreferrer"
+          title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/pantelisss" target="_blank" rel="noopener noreferrer" title="GitHub"><i
+            class="fab fa-github"></i></a>
+        <a href="mailto:giazitsispantelis@gmail.com" target="_blank" rel="noopener noreferrer" title="Email"><i
+            class="fas fa-envelope"></i></a>
       </div>
       <div class="founder">
         <h4>Manolis Zervos</h4>
-        <a href="https://www.linkedin.com/in/manolis-zervos-5a2146108/" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/manoszer" target="_blank" rel="noopener noreferrer" title="GitHub"><i class="fab fa-github"></i></a>
-        <a href="mailto:manoliszervos86@gmail.com" target="_blank" rel="noopener noreferrer" title="Email"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/manolis-zervos-5a2146108/" target="_blank" rel="noopener noreferrer"
+          title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/manoszer" target="_blank" rel="noopener noreferrer" title="GitHub"><i
+            class="fab fa-github"></i></a>
+        <a href="mailto:manoliszervos86@gmail.com" target="_blank" rel="noopener noreferrer" title="Email"><i
+            class="fas fa-envelope"></i></a>
       </div>
     </div>
     <div class="copyright">
       &copy; 2025 Infinite Loop. All rights reserved.
     </div>
   </footer>
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+    (function () {
+      emailjs.init("wwqCueC8StFkd2bWi");
+    })();
+  </script>
 </body>
+
 </html>
