--- a/public/index.html
+++ b/public/index.html
@@ -19,57 +19,34 @@
   </header>
   <main>
     <section>
-      <h2>About Us</h2>
-      <p>We are a software company dedicated to building modern, efficient, and scalable mobile applications.</p>
+      <h2 id="about-title"></h2>
+      <p id="about-description"></p>
     </section>
     <section>
-      <h2>Contact Us</h2>
+      <h2 id="contact-us-title"></h2>
       <form id="contact-form" class="contact-form">
         <div class="form-row">
           <div class="form-group">
-            <label for="first-name">First Name</label><br>
+            <label for="first-name" id="label-first-name"></label><br>
             <input type="text" id="first-name" name="first-name">
           </div>
           <div class="form-group">
-            <label for="last-name">Last Name</label><br>
+            <label for="last-name" id="label-last-name"></label><br>
             <input type="text" id="last-name" name="last-name">
           </div>
         </div>
         <div class="form-group">
-          <label for="email"><span style='color: #d32f2f;'>*</span> Email Address</label><br>
+          <label for="email" id="label-email"></label><br>
           <input type="email" id="email" name="email" required>
         </div>
         <div class="form-group">
-          <label for="question"><span style='color: #d32f2f;'>*</span> Leave your message</label><br>
+          <label for="question" id="label-question"></label><br>
           <textarea id="question" name="question" rows="4" required></textarea>
         </div>
         <input type="hidden" name="name" id="full-name">
         <input type="hidden" name="message" id="full-message">
-        <button type="submit" class="submit-btn">SUBMIT</button>
+        <button type="submit" class="submit-btn" id="submit-btn"></button>
       </form>
-      <script>
-        document.getElementById('contact-form').addEventListener('submit', function(event) {
-          event.preventDefault();
-          // Set hidden fields for EmailJS template
-          var firstName = document.getElementById('first-name').value.trim();
-          var lastName = document.getElementById('last-name').value.trim();
-          document.getElementById('full-name').value = (firstName + ' ' + lastName).trim();
-          document.getElementById('full-message').value = document.getElementById('question').value;
-          emailjs.sendForm('service_g38infl', 'template_jwvn8pb', this)
-            .then(function() {
-              alert('Many thanks for contacting us! We will get back to you as soon as possible.');
-              // Clear form fields
-              document.getElementById('first-name').value = '';
-              document.getElementById('last-name').value = '';
-              document.getElementById('email').value = '';
-              document.getElementById('question').value = '';
-              document.getElementById('full-name').value = '';
-              document.getElementById('full-message').value = '';
-            }, function(error) {
-              alert('Failed to send message. Please try again.');
-            });
-        });
-        </script>
     </section>
   </main>
   <footer>
@@ -98,10 +75,48 @@
     </div>
   </footer>
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script src="config.js"></script>
   <script>
-    (function () {
-      emailjs.init("wwqCueC8StFkd2bWi");
-    })();
+    let localizedTexts = {};
+    fetch('locales/en.json')
+      .then(response => response.json())
+      .then(texts => {
+        localizedTexts = texts;
+        document.getElementById('about-title').textContent = texts.about_title;
+        document.getElementById('about-description').textContent = texts.about_description;
+        document.getElementById('contact-us-title').textContent = texts.contact_us;
+        document.getElementById('label-first-name').textContent = texts.first_name;
+        document.getElementById('label-last-name').textContent = texts.last_name;
+        document.getElementById('label-email').innerHTML = `<span style='color: #d32f2f;'>*</span> ${texts.email_address}`;
+        document.getElementById('label-question').innerHTML = `<span style='color: #d32f2f;'>*</span> ${texts.leave_message}`;
+        document.getElementById('submit-btn').textContent = texts.submit;
+      });
+    emailjs.init(window.CONFIG.EMAILJS_PUBLIC_KEY);
+    document.getElementById('contact-form').addEventListener('submit', function(event) {
+      event.preventDefault();
+      // Set hidden fields for EmailJS template
+      var firstName = document.getElementById('first-name').value.trim();
+      var lastName = document.getElementById('last-name').value.trim();
+      document.getElementById('full-name').value = (firstName + ' ' + lastName).trim();
+      document.getElementById('full-message').value = document.getElementById('question').value;
+      emailjs.sendForm(
+        window.CONFIG.EMAILJS_SERVICE_ID,
+        window.CONFIG.EMAILJS_TEMPLATE_ID,
+        this
+      )
+      .then(function() {
+        alert(localizedTexts.success_message);
+        // Clear form fields
+        document.getElementById('first-name').value = '';
+        document.getElementById('last-name').value = '';
+        document.getElementById('email').value = '';
+        document.getElementById('question').value = '';
+        document.getElementById('full-name').value = '';
+        document.getElementById('full-message').value = '';
+      }, function(error) {
+        alert(localizedTexts.error_message);
+      });
+    });
   </script>
 </body>
 
