--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     </section>
     <section>
       <h2 id="contact-us-title"></h2>
-      <form id="contact-form" class="contact-form">
+      <form id="contact-form" class="contact-form" method="POST" action="#">
         <div class="form-row">
           <div class="form-group">
             <label for="first-name" id="label-first-name"></label><br>
